# chat-tui

./: Cargo.toml  README.md  draft_message_bubble.txt
src/: action.rs  app.rs  main.rs  model.rs  tio.rs  ui.rs
src/model/: messages.rs  mod.rs  sessions.rs
src/models/: messages.rs  mod.rs  sessions.rs  state.rs
src/ui/: blueprints.rs  chat_sidebar.rs  fps_hint.rs  keypress_hint.rs  message_viewer.rs  mod.rs  root_window.rs  ui_manager.rs
src/ui_entities/: chat_item.rs  chat_sidebar.rs  fps_hint.rs  keypress_hint.rs  message_viewer.rs  mod.rs  root_window.rs
src/widgets/: hilight_area.rs  message_bubble.rs  mod.rs
