[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.25.0"
color-eyre = "0.6.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
futures = "0.3.30"
